--- a/Train-Travel/Train-Travel.csproj
+++ b/Train-Travel/Train-Travel.csproj
@@ -61,6 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\addRoute.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\addRoute.Designer.cs">
+      <DependentUpon>addRoute.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,8 +97,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\QueryBuilder.cs" />
     <Compile Include="Utils\Structs.cs" />
+    <EmbeddedResource Include="Forms\addRoute.resx">
+      <DependentUpon>addRoute.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainAdmin.resx">
+      <DependentUpon>MainAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainUser.resx">
       <DependentUpon>MainUser.cs</DependentUpon>
