--- a/Train-Travel/Train-Travel.csproj
+++ b/Train-Travel/Train-Travel.csproj
@@ -46,6 +46,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -61,11 +64,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\addBrigade.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\addBrigade.Designer.cs">
+      <DependentUpon>addBrigade.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\addRoute.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\addRoute.Designer.cs">
       <DependentUpon>addRoute.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\addWorker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\addWorker.Designer.cs">
+      <DependentUpon>addWorker.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
@@ -97,8 +112,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\QueryBuilder.cs" />
     <Compile Include="Utils\Structs.cs" />
+    <EmbeddedResource Include="Forms\addBrigade.resx">
+      <DependentUpon>addBrigade.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\addRoute.resx">
       <DependentUpon>addRoute.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\addWorker.resx">
+      <DependentUpon>addWorker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -143,6 +164,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
+    <Content Include="favicon.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
