--- a/Train-Travel/Train-Travel.csproj
+++ b/Train-Travel/Train-Travel.csproj
@@ -70,6 +70,12 @@
     <Compile Include="Forms\addBrigade.Designer.cs">
       <DependentUpon>addBrigade.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\addPlace.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\addPlace.Designer.cs">
+      <DependentUpon>addPlace.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\addRoute.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,10 +116,18 @@
     <Compile Include="Model\Voyage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Utils\QueryBuilder.cs" />
     <Compile Include="Utils\Structs.cs" />
     <EmbeddedResource Include="Forms\addBrigade.resx">
       <DependentUpon>addBrigade.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\addPlace.resx">
+      <DependentUpon>addPlace.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\addRoute.resx">
       <DependentUpon>addRoute.cs</DependentUpon>
@@ -135,13 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
